<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_name"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAS"
                android:text="@string/a_scoreS"
                android:textSize="50sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAL"
                android:text="@string/a_scoreL"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAbtn"
                android:text="@string/add_point_btn"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_name"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamBS"
                android:text="@string/b_scoreS"
                android:textSize="50sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamBL"
                android:text="@string/b_scoreL"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamBbtn"
                android:text="@string/add_point_btn"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetbtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_btn"
        android:backgroundTint="@color/black" />

</RelativeLayout>